css/shelfs.css
@-webkit-keyframes zoom-roll-top {
  50% {
    -webkit-transform: rotateX(-10deg) translateZ(-200px);
  }
  100% {
    -webkit-transform: rotateX(0) translateZ(0);
  }
}
@-webkit-keyframes zoom-roll-middle {
  50% {
    -webkit-transform: rotateX(-10deg) translateZ(-200px);
  }
  100% {
    -webkit-transform: rotateX(0) translateZ(0);
  }
}
@-webkit-keyframes zoom-roll-bottom {
  50% {
    -webkit-transform: rotateX(-10deg) translateZ(-200px);
  }
  100% {
    -webkit-transform: rotateX(0) translateZ(0);
  }
}

.roll-camera {
  -webkit-transform-style: preserve-3d;
}
.roll-camera .move-camera {
  -webkit-transform-style: preserve-3d;
  -webkit-transform: translateY(0px);
  -webkit-transition: all 3s ease-in-out;
}

body.view-top-shelf .roll-camera {
  -webkit-animation: zoom-roll-top 3s ease-in-out;
}
body.view-top-shelf .roll-camera .move-camera {
  -webkit-transform: translateY(0px);
}

body.view-middle-shelf .roll-camera {
  -webkit-animation: zoom-roll-middle 3s ease-in-out;
}
body.view-middle-shelf .roll-camera .move-camera {
  -webkit-transform: translateY(-200px);
}

body.view-bottom-shelf .roll-camera {
  -webkit-animation: zoom-roll-bottom 3s ease-in-out;
}
body.view-bottom-shelf .roll-camera .move-camera {
  -webkit-transform: translateY(-400px);
}

.wallpaper {
  width: 200%;
  height: 2000px;
  margin-left:-50%;
  background-image: -webkit-linear-gradient(-55deg, #769a31 10%, #526b22 50%);
}
.wallpaper:before {
  content:"";
  display:block;
  width:100%;
  height:100%;
  background: url('../images/white_wall.png');
}
.shelf {
  position: absolute;
  left:50%;
  margin-left:-325px;
  -webkit-transform-style:  preserve-3d;
  -webkit-backface-visibility:  hidden;
  -webkit-transform: rotateY(90deg) rotateX(90deg) translateX(199px);
}
.shelf.top {
  top: 450px;
}
.shelf.middle {
  top: 650px;
}
.shelf.bottom {
  top: 850px;
}
.shelf .face {
  position: absolute;
  top:0;
  left:0;
  background-color: #fff7eb;
  /*background: url('../images/melamine-wood-5.png') 50% 50% repeat;*/
  box-shadow: inset 0 0 75px 1.5px rgba(0, 0, 0, .1);
}
.shelf .front {
  width: 100px;
  height: 700px;
  -webkit-transform-style: preserve-3d;
  -webkit-transform: translateX(35px) translateY(-350px) translateZ(10px);
}
.shelf .back {
  width: 100px;
  height: 700px;
  -webkit-transform: translateX(35px) translateY(-350px) translateZ(-10px);
}
.shelf .left {
  width: 20px;
  height: 700px;
  -webkit-transform: translateX(25px) translateY(-350px) rotateY(-90deg) translateZ(0);
}
.shelf .top {
  width: 20px;
  height: 100px;
  -webkit-transform: translateX(75px) translateY(300px) rotateX(90deg) rotateZ(90deg);
}
.shelf .bottom {
  width: 20px;
  height: 100px;
  -webkit-transform: translateX(75px) translateY(-400px) rotateX(90deg) rotateZ(90deg);
}

/* lighting */
.shelf:before {
  content:"";
  display:block;
  width: 670px;
  height:20px;
  box-shadow: 0 -30px 30px 20px rgba(0, 0, 0, 0.5);
  -webkit-transform:  rotateX(90deg)
                      rotateY(90deg)
                      translateX(-20px)
                      translateZ(-200px)
                      skew(-45deg);
}
.shelf .back:before {
  content:"";
  position: absolute;
  display:block;
  width: 100%;
  height:100%;
  background: rgba(0, 0, 0, 0.65);
}
.shelf .top:before,
.shelf .bottom:before,
.shelf .left:before,
.shelf .right:before {
  content:"";
  position: absolute;
  display:block;
  width: 100%;
  height:100%;
  background: rgba(0, 0, 0, 0.25);
}

.shelf .ball-scene {
  -webkit-transform: translate3d(0px, 25px, 75px) rotateY(90deg);
}

